# SvgRenderer

./: .gitmodules  CMakeLists.txt  Notes.md  README.md
SvgRenderer/: CMakeLists.txt  Main.cpp  SvgRenderer.cpp  srpch.h
SvgRenderer/Core/: Application.cpp  Application.h  Log.cpp  Logger.cpp  ThreadPool.cpp  ThreadPool.h  Timer.h  Window.cpp  Window.h
SvgRenderer/Renderer/: BaseRenderer.cpp  BaseRenderer.h  Bezier.cpp  Bezier.h  Defs.h  FillRenderer.cpp  FillRenderer.h  Flattening.cpp  Flattening.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Path.cpp  Path.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  StorageBuffer.cpp  StorageBuffer.h  TileBuilder.cpp  TileBuilder.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
SvgRenderer/Renderer/Pipeline/: CPUPipeline.cpp  CPUPipeline.h  GPUPipeline.cpp  GPUPipeline.h  Pipeline.h
SvgRenderer/Scene/: OrthographicCamera.cpp  OrthographicCamera.h
SvgRenderer/Utils/: BoundingBox.h  Equations.h
SvgRenderer/core/: Application.cpp  Application.h  Assert.h  Base.h  Filesystem.cpp  Filesystem.h  Log.cpp  Log.h  Logger.cpp  Logger.h  SvgParser.cpp  SvgParser.h  ThreadPool.h  Window.cpp  Window.h
SvgRenderer/coree/: Generator.h  SvgParser.cpp
assets/shaders/: CalcBbox.comp  CalcQuads.comp  CalculateQuads.comp  Coarse.comp  CoarseBbox.comp  DisplayFbo.frag  DisplayFbo.vert  Fill.comp  Fine.comp  Flatten.comp  Main.frag  (+17 more)
modules/glad/: CMakeLists.txt
modules/glad/ext/include/glad/: glad.h
modules/glad/ext/src/: glad.c
(+4 files in other folders)
